[gd_scene load_steps=16 format=2]

[ext_resource path="res://Game/UI/Screen/GameOver/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Resource/Buttons/Play-again-1.png" type="Texture" id=2]
[ext_resource path="res://Resource/Fonts/Bungee-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resource/Fonts/label_theme.tres" type="Theme" id=4]
[ext_resource path="res://Resource/Icons/clock-96.png" type="Texture" id=5]
[ext_resource path="res://Resource/Icons/best-score-96.png" type="Texture" id=6]
[ext_resource path="res://Resource/Buttons/Home-2.png" type="Texture" id=7]
[ext_resource path="res://Resource/Icons/pixel-star-96.png" type="Texture" id=8]
[ext_resource path="res://Resource/Icons/quick-mode-on-96.png" type="Texture" id=9]
[ext_resource path="res://Resource/Buttons/Play-again-2.png" type="Texture" id=10]
[ext_resource path="res://Resource/Buttons/Home-1.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=3]
size = 9
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=4]
size = 13
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GameOver" type="Popup"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 15.0
custom_constants/separation = 3

[node name="Message" type="Label" parent="VBoxContainer"]
margin_right = 320.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 6 )
text = "Message"
align = 1

[node name="Miles" type="Label" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 320.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 4 )
text = "Miles"
align = 1

[node name="ColorRect" type="Label" parent="."]
margin_left = 85.0
margin_top = 50.0
margin_right = 235.0
margin_bottom = 133.0
custom_styles/normal = SubResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="ColorRect/CenterContainer"]
margin_left = 9.0
margin_top = 10.0
margin_right = 141.0
margin_bottom = 72.0
custom_constants/vseparation = 10

[node name="LRunContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/GridContainer"]
margin_right = 132.0
margin_bottom = 8.0
custom_constants/separation = 6

[node name="Container" type="CenterContainer" parent="ColorRect/CenterContainer/GridContainer/LRunContainer"]
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 20, 0 )

[node name="Control" type="Control" parent="ColorRect/CenterContainer/GridContainer/LRunContainer/Container"]
margin_left = 10.0
margin_top = 4.0
margin_right = 10.0
margin_bottom = 4.0

[node name="Sprite" type="Sprite" parent="ColorRect/CenterContainer/GridContainer/LRunContainer/Container/Control"]
scale = Vector2( 0.18, 0.18 )
texture = ExtResource( 9 )

[node name="LongestRunTitle" type="Label" parent="ColorRect/CenterContainer/GridContainer/LRunContainer"]
margin_left = 26.0
margin_right = 91.0
margin_bottom = 8.0
rect_min_size = Vector2( 65, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "Longest Run"
valign = 1

[node name="LongestRunValue" type="Label" parent="ColorRect/CenterContainer/GridContainer/LRunContainer"]
margin_left = 97.0
margin_right = 132.0
margin_bottom = 8.0
rect_min_size = Vector2( 35, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "0m"
align = 2

[node name="ScoreContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/GridContainer"]
margin_top = 18.0
margin_right = 132.0
margin_bottom = 26.0
custom_constants/separation = 6

[node name="Container2" type="CenterContainer" parent="ColorRect/CenterContainer/GridContainer/ScoreContainer"]
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 20, 0 )

[node name="Control" type="Control" parent="ColorRect/CenterContainer/GridContainer/ScoreContainer/Container2"]
margin_left = 10.0
margin_top = 4.0
margin_right = 10.0
margin_bottom = 4.0

[node name="Sprite" type="Sprite" parent="ColorRect/CenterContainer/GridContainer/ScoreContainer/Container2/Control"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 8 )

[node name="ScoreTitle" type="Label" parent="ColorRect/CenterContainer/GridContainer/ScoreContainer"]
margin_left = 26.0
margin_right = 91.0
margin_bottom = 8.0
rect_min_size = Vector2( 65, 0 )
theme = ExtResource( 4 )
text = "Score"
valign = 1

[node name="ScoreValue" type="Label" parent="ColorRect/CenterContainer/GridContainer/ScoreContainer"]
margin_left = 97.0
margin_right = 132.0
margin_bottom = 8.0
rect_min_size = Vector2( 35, 0 )
theme = ExtResource( 4 )
text = "0"
align = 2

[node name="HScoreContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/GridContainer"]
margin_top = 36.0
margin_right = 132.0
margin_bottom = 44.0
custom_constants/separation = 6

[node name="Container2" type="CenterContainer" parent="ColorRect/CenterContainer/GridContainer/HScoreContainer"]
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 20, 0 )

[node name="Control" type="Control" parent="ColorRect/CenterContainer/GridContainer/HScoreContainer/Container2"]
margin_left = 10.0
margin_top = 4.0
margin_right = 10.0
margin_bottom = 4.0

[node name="Sprite" type="Sprite" parent="ColorRect/CenterContainer/GridContainer/HScoreContainer/Container2/Control"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )

[node name="HighestScoreTitle" type="Label" parent="ColorRect/CenterContainer/GridContainer/HScoreContainer"]
margin_left = 26.0
margin_right = 91.0
margin_bottom = 8.0
rect_min_size = Vector2( 65, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "Highest Score"
valign = 1

[node name="HighestScoreValue" type="Label" parent="ColorRect/CenterContainer/GridContainer/HScoreContainer"]
margin_left = 97.0
margin_right = 132.0
margin_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "0"
align = 2

[node name="TimeContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/GridContainer"]
margin_top = 54.0
margin_right = 132.0
margin_bottom = 62.0
custom_constants/separation = 6

[node name="Container2" type="CenterContainer" parent="ColorRect/CenterContainer/GridContainer/TimeContainer"]
margin_right = 20.0
margin_bottom = 8.0
rect_min_size = Vector2( 20, 0 )

[node name="Control" type="Control" parent="ColorRect/CenterContainer/GridContainer/TimeContainer/Container2"]
margin_left = 10.0
margin_top = 4.0
margin_right = 10.0
margin_bottom = 4.0

[node name="Sprite" type="Sprite" parent="ColorRect/CenterContainer/GridContainer/TimeContainer/Container2/Control"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="TimeTitle" type="Label" parent="ColorRect/CenterContainer/GridContainer/TimeContainer"]
margin_left = 26.0
margin_right = 91.0
margin_bottom = 8.0
rect_min_size = Vector2( 65, 0 )
theme = ExtResource( 4 )
text = "Game Time"
valign = 1

[node name="TimeValue" type="Label" parent="ColorRect/CenterContainer/GridContainer/TimeContainer"]
margin_left = 97.0
margin_right = 132.0
margin_bottom = 8.0
rect_min_size = Vector2( 35, 0 )
theme = ExtResource( 4 )
text = "0"
align = 2

[node name="Home" type="TouchScreenButton" parent="."]
position = Vector2( 72, 144 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 11 )
pressed = ExtResource( 7 )

[node name="PlayAgain" type="TouchScreenButton" parent="."]
position = Vector2( 168, 144 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 2 )
pressed = ExtResource( 10 )

[connection signal="released" from="Home" to="." method="_on_Home_released"]
[connection signal="released" from="PlayAgain" to="." method="_on_PlayAgain_released"]
